# stopwatch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  stopwatch.h
examples/: StopwatchExample.cpp
include/Stopwatch/: Stopwatch.h
tests/: StopwatchTests.cpp
